# nostring-heir

./: .gitignore  LICENSE  README.md  build-wasm.sh  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/nostring/nostring_heir/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screens/: broadcast_screen.dart  claim_screen.dart  import_screen.dart  scan_screen.dart  status_screen.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/theme/: nostring_theme.dart
lib/widgets/: gold_gradient_text.dart  info_row.dart  section_header.dart  status_badge.dart
rust/: Cargo.toml
rust/nostring-heir-ffi/: Cargo.toml  build.rs
rust/nostring-heir-ffi/src/: lib.rs
rust/src/: api.rs  frb_generated.rs
rust/tests/: e2e_testnet.rs
test/: widget_test.dart
web/: package-lock.json  package.json  vite.config.ts
web/src/lib/: esplora.ts  stores.ts  wasm-bridge.ts
web/src/lib/components/: Claim.svelte  Import.svelte  Status.svelte
web/src/lib/wasm/: nostring_heir_ffi.d.ts
web/src/routes/: +layout.ts  +page.svelte
web/static/: manifest.json
