[package]
name = "nostring-heir-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NoString workspace crates (path deps for local dev)
nostring-inherit = { path = "../../nostring/crates/nostring-inherit" }
nostring-ccd = { path = "../../nostring/crates/nostring-ccd" }
nostring-electrum = { path = "../../nostring/crates/nostring-electrum" }
bitcoin = { version = "0.32", features = ["serde"] }
hex = "0.4"
base64 = "0.22"
miniscript = { version = "12", features = ["serde"] }
rustls = "0.23"

[dev-dependencies]
bitcoinconsensus = "0.106"
