[package]
name = "nostring-heir-ffi"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "UniFFI bindings for NoString heir claim functionality"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "nostring_heir_ffi"

[dependencies]
nostring-ccd = { git = "https://github.com/RenAndKiwi/nostring.git", branch = "main" }
nostring-inherit = { git = "https://github.com/RenAndKiwi/nostring.git", branch = "main" }
nostring-electrum = { git = "https://github.com/RenAndKiwi/nostring.git", branch = "main" }
bitcoin = { version = "0.32", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
uniffi = "0.28"
thiserror = "2"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
