[package]
name = "nostring-heir-ffi"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "WASM bindings for NoString heir claim functionality"

[lib]
crate-type = ["cdylib", "rlib"]
name = "nostring_heir_ffi"

[dependencies]
nostring-ccd = { git = "https://github.com/RenAndKiwi/nostring.git", branch = "main" }
nostring-inherit = { git = "https://github.com/RenAndKiwi/nostring.git", branch = "main" }
nostring-electrum = { git = "https://github.com/RenAndKiwi/nostring.git", branch = "main" }
bitcoin = { version = "0.32", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
wasm-bindgen = "0.2"
thiserror = "2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
