[package]
name = "nostring-heir-ffi"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
description = "WASM bindings for NoString heir claim functionality"

[lib]
crate-type = ["cdylib", "rlib"]
name = "nostring_heir_ffi"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
wasm-bindgen = "0.2"
thiserror = "2"
bech32 = "0.11"

[dev-dependencies]
wasm-bindgen-test = "0.3"
